# MuseTalk

./: README.md  app.py  cmd.bat  download_weights.bat  download_weights.sh  inference.bat  pyproject.toml  requirements.txt  test_ffmpeg.py  train.py
musetalk/data/: audio.py  dataset.py  sample_method.py
musetalk/loss/: basic_loss.py  conv.py  discriminator.py  resnet.py  syncnet.py  vgg_face.py
musetalk/models/: syncnet.py  unet.py  vae.py
musetalk/utils/: __init__.py  audio_processor.py  audio_utils.py  blending.py  preprocessing.py  training_utils.py  utils.py
musetalk/utils/dwpose/: default_runtime.py  rtmpose-l_8xb32-270e_coco-ubody-wholebody-384x288.py
musetalk/utils/face_detection/: __init__.py  api.py  models.py  utils.py
musetalk/utils/face_detection/detection/: __init__.py  core.py
musetalk/utils/face_detection/detection/sfd/: __init__.py  bbox.py  detect.py  net_s3fd.py  sfd_detector.py
musetalk/utils/face_parsing/: __init__.py  model.py  resnet.py
musetalk/whisper/: audio2feature.py
musetalk/whisper/whisper/: __init__.py  audio.py  decoding.py  model.py  tokenizer.py  transcribe.py  utils.py
musetalk/whisper/whisper/normalizers/: __init__.py  basic.py  english.py
scripts/: inference.py  preprocess.py  realtime_inference.py
wheels/: mmcv-2.0.1+cu128-cp310-cp310-win_amd64.whl  mmcv-2.0.1+cu130-cp310-cp310-win_amd64.whl
