[project]
name = "MuseTalk"
version = "1.5.1"
description = "MuseTalk: Real-Time High Quality Lip Synchorization with Latent Space Inpainting"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=0.28.0",
    "diffusers>=0.30.2",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "gradio>=5.24.0",
    "imageio[ffmpeg]>=2.37.3",
    "librosa>=0.11.0",
    "mmcv",
    "mmdet<3.3.0,>=3.0.0",
    "mmengine>=0.11.0rc2",
    "mmpose>=1.3.2",
    "moviepy>=2.2.1",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.9.0.80",
    "openmim>=0.3.9",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers<5.0.0",
]

[dependency-groups]
dev = [
    "setuptools<82",
]

[tool.uv]
build-constraint-dependencies = ["setuptools<82"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
mmcv = { path = "./wheels/mmcv-2.0.1+cu130-cp310-cp310-win_amd64.whl" }
